# statki

./: CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt  Window.cpp
Graphics/: CMakeLists.txt  Point.cpp
Include/Core/: Board.h  Globals.h  Mouse.h  Window.h
Include/Errors/: ErrorType.h  FileSystemError.h  SDLError.h
Include/Graphics/: BmpTexture.h  Point.hh  Rectangle.h  Renderer.h  Texture.h
Include/UI/: Button.h  Element.h  Grid.h  Widget.h
Include/Utils/: Color.h  Printer.h
